--- a/ReservasHoteleriaServices/Properties/Resources.resx
+++ b/ReservasHoteleriaServices/Properties/Resources.resx
@@ -118,6 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="UrlApi" xml:space="preserve">
-    <value>https://reservashoteleria.azurewebsites.net</value>
+    <value>https://reservashoteleria.azurewebsites.net/</value>
   </data>
 </root>
