Actualización masiva de UI y mejoras en informes
Se han realizado múltiples cambios en la interfaz de usuario y en la gestión de informes, incluyendo:

- Actualización de imágenes y textos en `MainPage.xaml`.
- Rediseño de interfaces en `AddEditReservaView.xaml` y `AddEditServicioAdicionalView.xaml`.
- Reorganización de botones en `ReservasView.xaml` y `ServiciosAdicionalesView.xaml`.
- Ampliación del conjunto de datos `ReservasHoteleriaDataSet` con nuevas tablas y métodos.
- Adición de nuevos informes RDLC para empleados, habitaciones, servicios y servicios adicionales.
- Creación de nuevas páginas y componentes en Blazor para la gestión de empleados, habitaciones, reservas y servicios.
- Implementación de autenticación con Firebase en `Login.razor` y `SingUp.razor`.
 Y proyecto finalizado :)

--- a/ReservasHoteleriaDesktop/Home.resx
+++ b/ReservasHoteleriaDesktop/Home.resx
@@ -135,6 +135,21 @@
   <metadata name="MenuServiciosAdicionales.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>814, 17</value>
   </metadata>
+  <metadata name="iconMenuListados.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>129, 5</value>
+  </metadata>
+  <metadata name="iconMenuEmpleados.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>129, 5</value>
+  </metadata>
+  <metadata name="iconMenuHabitaciones.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>267, 5</value>
+  </metadata>
+  <metadata name="iconMenuServicios.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>405, 5</value>
+  </metadata>
+  <metadata name="iconMenuServiciosAdicionales.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>543, 5</value>
+  </metadata>
   <metadata name="MenuSalir.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>22, 37</value>
   </metadata>
